// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/ScrollBar with default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    scale={1}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={undefined}
        scale={1}
      />,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": false,
        "orientation": "vertical",
        "progress": undefined,
        "scale": 1,
      },
      "ref": null,
      "rendered": false,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={undefined}
          scale={1}
        />,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": false,
          "orientation": "vertical",
          "progress": undefined,
          "scale": 1,
        },
        "ref": null,
        "rendered": false,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar with knobs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
      Object {
        "thumbColor": "#666",
        "thumbWidth": 15,
        "trackColor": "#efefef",
        "trackWidth": 15,
      }
    }
  >
    <ScrollBar
      orientation="vertical"
      overflow="auto"
      progress={0}
      scale={1}
      style={
        Object {
          "height": "400px",
          "margin": "25vh",
        }
      }
    />
  </ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "orientation": "vertical",
      "overflow": "auto",
      "progress": 0,
      "scale": 1,
      "style": Object {
        "height": "400px",
        "margin": "25vh",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "orientation": "vertical",
        "overflow": "auto",
        "progress": 0,
        "scale": 1,
        "style": Object {
          "height": "400px",
          "margin": "25vh",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    scale={2}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={undefined}
        scale={2}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": undefined,
        "scale": 2,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={undefined}
          scale={2}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": undefined,
          "scale": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0.5 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={0.5}
    scale={2}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={0.5}
        scale={2}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 0.5,
        "scale": 2,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={0.5}
          scale={2}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 0.5,
          "scale": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0.25 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={0.25}
    scale={2}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={0.25}
        scale={2}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 0.25,
        "scale": 2,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={0.25}
          scale={2}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 0.25,
          "scale": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 0.75 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={0.75}
    scale={2}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={0.75}
        scale={2}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 0.75,
        "scale": 2,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={0.75}
          scale={2}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 0.75,
          "scale": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 2 with progress 1 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={1}
    scale={2}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={1}
        scale={2}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 1,
        "scale": 2,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={1}
          scale={2}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 1,
          "scale": 2,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    scale={10}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={undefined}
        scale={10}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": undefined,
        "scale": 10,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={undefined}
          scale={10}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": undefined,
          "scale": 10,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0.5 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={0.5}
    scale={10}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={0.5}
        scale={10}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 0.5,
        "scale": 10,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={0.5}
          scale={10}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 0.5,
          "scale": 10,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0.25 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={0.25}
    scale={10}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={0.25}
        scale={10}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 0.25,
        "scale": 10,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={0.25}
          scale={10}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 0.25,
          "scale": 10,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 0.75 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={0.75}
    scale={10}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={0.75}
        scale={10}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 0.75,
        "scale": 10,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={0.75}
          scale={10}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 0.75,
          "scale": 10,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/ScrollBar/Vertical/Scale 10 with progress 1 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScrollBar
    orientation="vertical"
    overflow="auto"
    progress={1}
    scale={10}
    style={
      Object {
        "height": "100vh",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ThumbContainer
        orientation="vertical"
        progress={1}
        scale={10}
      >
        <Thumb
          orientation="vertical"
        />
      </ThumbContainer>,
      "className": undefined,
      "orientation": "vertical",
      "style": Object {
        "height": "100vh",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Thumb
          orientation="vertical"
        />,
        "orientation": "vertical",
        "progress": 1,
        "scale": 10,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "orientation": "vertical",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ThumbContainer
          orientation="vertical"
          progress={1}
          scale={10}
        >
          <Thumb
            orientation="vertical"
          />
        </ThumbContainer>,
        "className": undefined,
        "orientation": "vertical",
        "style": Object {
          "height": "100vh",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Thumb
            orientation="vertical"
          />,
          "orientation": "vertical",
          "progress": 1,
          "scale": 10,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "orientation": "vertical",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
